CTA buttons alignment in Add/Edit Item modal fixed

--- a/src/pages/GroceryItemsPage/GroceryItemsPage.scss
+++ b/src/pages/GroceryItemsPage/GroceryItemsPage.scss
@@ -91,7 +91,7 @@
     }
 
     &--input {
-      height: 1.8rem;
+      height: 2rem;
       padding: 0.3rem 0.5rem;
       border: 2px solid $secondary-chineseSilver;
       border-radius: 0.25rem;
@@ -106,11 +106,16 @@
     }
   }
 
-  &__form--actions {
+  &__form-actions {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin-top: 1rem;
     gap: 1rem;
+    height: 2.5rem;
+
+    @include tablet {
+      gap: 13.5rem;
+    }
   }
 
   &__form--submit,
